Update school dashborad

--- a/languages/school-management-fr_FR.po
+++ b/languages/school-management-fr_FR.po
@@ -6002,7 +6002,7 @@ msgstr "Enquêtes actives"
 #. translators: %s: session label
 #: admin/inc/school/staff/general/dashboard/stats.php:91
 msgid ""
-"Transferred to Other School <br><small class=\"text-secondary\"> - Session: "
+"Transferred to Other College <br><small class=\"text-secondary\"> - Session: "
 "%s</small>"
 msgstr ""
 "Transfert vers une autre école <br><small class=\"text-secondary\"> - "
@@ -6011,7 +6011,7 @@ msgstr ""
 #. translators: %s: session label
 #: admin/inc/school/staff/general/dashboard/stats.php:110
 msgid ""
-"Transferred to this School <br><small class=\"text-secondary\"> - Session: "
+"Transferred to this College <br><small class=\"text-secondary\"> - Session: "
 "%s</small>"
 msgstr ""
 "Transféré à cette école <br><small class=\"text-secondary\"> - Session: %s</"
@@ -7556,7 +7556,7 @@ msgid "Students Transferred"
 msgstr "Les élèves transférés"
 
 #: admin/inc/school/staff/general/transfer-student/index.php:23
-msgid "Students Transferred to Other School"
+msgid "Students Transferred to Other College"
 msgstr "Élèves transférés dans une autre école"
 
 #: admin/inc/school/staff/general/transfer-student/index.php:42
@@ -7569,7 +7569,7 @@ msgid "Transfer Date"
 msgstr "Date du transfert"
 
 #: admin/inc/school/staff/general/transfer-student/index.php:53
-msgid "Students Transferred to this School"
+msgid "Students Transferred to this College"
 msgstr "Élèves transférés dans cette école"
 
 #: admin/inc/school/staff/general/transfer-student/index.php:72
